--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -185,11 +185,16 @@
 }
 
 .outer .activenavmenu .menuitems .whatsapp{
-  width: 4.8rem;
-  height: 4.8rem;
+  width: 5rem;
+  height: 5rem;
   border-radius: 50%;
   background: #5772FF;
   margin-left: 3rem;
+}
+
+.outer .activenavmenu .menuitems img{
+  width: 20px;
+  height: 19.08px;
 }
 
 .outer .navmenu{
