--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -369,8 +369,20 @@
     }
 
     .blog .main .left .box .bottom .datencmt{
-        width: 24.8rem;
+        /* width: 24.8rem;
+        font-size: 14px; */
+        width: 188px;
+        height: 17px;
+
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 700;
         font-size: 14px;
+        line-height: 120%;
+
+        letter-spacing: 0.02em;
+
+        color: #898B92;
     } 
 
     .blog .main .left .box .bottom .blogcontent{
