--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -397,3 +397,10 @@
 
 
 }
+
+
+@media screen and (max-width : 360px){
+    .footer .top .footerinfo .contactus .heading{
+        font-size: 5px;
+    }
+}
