--- a/src/components/Careers/Careers.css
+++ b/src/components/Careers/Careers.css
@@ -223,9 +223,10 @@
         font-style: normal;
         font-weight: 800;
         font-size: 18px;
+        /* font-size: 14px; */
         line-height: 120%;
         /* identical to box height, or 22px */
-        
+        /* text-align: center; */
         letter-spacing: 0.02em;
         
         /* text-color */
@@ -246,7 +247,28 @@
         /* font-size: 14px; */
         font-size: 12px;
 
-
     }     
     
+}
+
+
+@media screen and (max-width : 380px){
+    .careers .main .top .heading{
+        width: 191px;
+        height: 22px;
+        
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 800;
+        /* font-size: 18px; */
+        font-size: 14px;
+        line-height: 120%;
+        /* identical to box height, or 22px */
+        text-align: center;
+        letter-spacing: 0.02em;
+        
+        /* text-color */
+        
+        color: #252B42;        
+    }
 }
