--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -339,6 +339,10 @@
         width: 70%;
     }
 
+    .footer .top .footerinfo .info .heading{
+        font-size: 14px;
+    } 
+
     .footer .top .footerinfo .aboutus{
         height: 100px;
     }
@@ -397,6 +401,9 @@
         width: 80%;
     }
 
+    .footer .top .footerinfo .social .heading{
+        font-size: 14px;
+    }
 
 }
 
