--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -371,7 +371,8 @@
     .blog .main .left .box .bottom .datencmt{
         /* width: 24.8rem;
         font-size: 14px; */
-        width: 188px;
+        /* width: 188px; */
+        width: 100%;
         height: 17px;
 
         font-family: 'Lato';
@@ -379,7 +380,7 @@
         font-weight: 700;
         font-size: 14px;
         line-height: 120%;
-
+        text-align: center;
         letter-spacing: 0.02em;
 
         color: #898B92;
