--- a/src/components/Careers/RPManager.css
+++ b/src/components/Careers/RPManager.css
@@ -644,6 +644,10 @@
 
 
 @media screen and (max-width : 480px){
+    .rpmanager .main .top .right .search .searchBar input::placeholder{
+        font-size: 14px;
+    }
+
     .rpmanager .main .bottom .form .fullname + input::placeholder{
         font-size: 14px;
     }
@@ -652,6 +656,37 @@
     .rpmanager .main .bottom .form input:nth-child(3)::placeholder{
         font-size: 14px;
     }
+
+    .rpmanager .main .bottom .form .consent {
+        width: 100%;
+    }
+
+    .rpmanager .main .bottom .form .consent div {
+        width: 92%;
+    }
+
+    .rpmanager .main .bottom .form .submit {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 1.6rem 4rem;
+        gap: 0.8rem;
+        width: 18.2rem;
+        height: 5.4rem;
+        background: #4D0043;
+        border-radius: 4.5rem;
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 800;
+        font-size: 1.4rem;
+        line-height: 120%;
+        text-align: center;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        border: none;
+    }
+    
 }
 
 @media screen and (max-width : 414px){
@@ -676,7 +711,7 @@
     }
 
     .rpmanager .main .top .right .jobCatergory{
-        /* font-size: 20px; */
+        font-size: 18px;
     }
 
     .rpmanager .main .top .right .categories{
@@ -689,7 +724,7 @@
     } 
 
     .rpmanager .main .top .right .search .searchHeading{
-        font-size: 20px;
+        font-size: 18px;
     }
 
     .rpmanager .main .top .right .recentJobs .recentJobList{
@@ -698,6 +733,11 @@
 
     .rpmanager .main .top .right .recentJobs .recentJobList a{
         /* width: 23rem; */
+    } 
+
+    .rpmanager .main .top .right .recentJobs .recentJobHeading{
+        width: 16.2rem;
+        font-size: 18px;
     } 
 
     .rpmanager .main .bottom .subhead{
@@ -734,8 +774,8 @@
     }
 
     .rpmanager .main .bottom .form .submit{
-        width: 27.4rem;
-        font-size: 1.8rem;
+        /* width: 27.4rem;
+        font-size: 1.8rem; */
     } 
 }
 
