--- a/src/style/AdditionalServices.css
+++ b/src/style/AdditionalServices.css
@@ -235,6 +235,31 @@
         height: 90%;
     }
 
+    .additionalservices .main .top{
+        width: 100%;
+        height: 6rem;
+    }
+
+    .additionalservices .main .top .heading{
+        /* width: 234px; */
+        width: 100%;
+        height: 24px;
+        
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 800;
+        font-size: 20px;
+        text-align: center;
+        line-height: 120%;
+        /* identical to box height, or 24px */
+        
+        letter-spacing: 0.02em;
+        
+        /* text-color */
+        
+        color: #252B42;        
+    } 
+
     .additionalservices .main .bottom{
         height: 90%;
     }
@@ -249,6 +274,8 @@
     .additionalservices .main .bottom .flexrow .box{
         width: 100%;
         height: 88px;
+        position: relative;
+        overflow: hidden;
     }
 
     .additionalservices .main .bottom .flexrow .box6 .left .services{
