--- a/src/style/Carousel.css
+++ b/src/style/Carousel.css
@@ -307,9 +307,24 @@
     width: 26px;
     height: 25.08px;
   }
+  
 
   .carousel{
     width: 100%;
     height: 350px; 
+  }
+
+  .card_button{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+    gap: 8px;
+    width: 144px;
+    height: 40px;
+    border-radius: 27px;
+    border: none;
+    font-size: 12px;
   }
 }
