--- a/src/style/whatdoyou.css
+++ b/src/style/whatdoyou.css
@@ -140,14 +140,54 @@
     }
 
     .whatdoyou .main{
-        height: 62%;
+        /* height: 62%; */
+        height: 75%;
+    }
+
+    .whatdoyou .main .top{
+        width: 100%;
+        height: 6rem;
+    } 
+
+    .whatdoyou .main .top .heading{
+        /* width: 215px; */
+        width: 100%;
+        height: 22px;
+        left: 80px;
+        top: 48px;
+        
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 800;
+        font-size: 20px;
+        text-align: center;
+        line-height: 110%;
+        /* identical to box height, or 22px */
+        
+        letter-spacing: 0.02em;
+        
+        color: #FFFFFF;        
     }
 
     .whatdoyou .main .bottom{
-        height: 19rem;
+        /* height: 19rem; */
+        height: 22rem;
     }
 
     .whatdoyou .main .bottom .content{
         width: 48.2rem;
+    }
+
+    .whatdoyou .main .bottom .button{
+        align-items: center;
+        border: none;
+        border-radius: 27px;
+        display: flex;
+        flex-direction: row;
+        gap: 8px;
+        height: 40px;
+        justify-content: center;
+        padding: 16px;
+        width: 144px;
     }
 }
