--- a/src/components/ContactUs/DropMessage.css
+++ b/src/components/ContactUs/DropMessage.css
@@ -202,14 +202,27 @@ input ::placeholder, ::placeholder{
 }
 
 .name::placeholder{
-    width: 55px;
+    /* width: 55px; */
+    width: 100%;
     height: 22px;
+    text-align: left;
 }
 
 .email::placeholder{
-    width: 59px;
+    /* width: 59px; */
+    width: 100%;
     height: 22px;
+    text-align: left;
 }
+
+.messageText::placeholder{
+    width: 100%;
+    text-align: left;
+}
+
+/* input[type="text"]::placeholder {
+    text-align: left;
+} */
 
 /* Responsive  */
 
