--- a/src/style/Quotes.css
+++ b/src/style/Quotes.css
@@ -87,7 +87,7 @@
     font-size: 1.8rem;
     line-height: 120%;
     /* identical to box height, or 22px */
-    
+    text-decoration: none;
     text-align: center;
     text-transform: uppercase;
     
