--- a/src/style/Clients.css
+++ b/src/style/Clients.css
@@ -56,8 +56,43 @@
     height: 58%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     flex-wrap: wrap;
+    position: relative;
+    cursor: pointer;
+}
+
+.clients .main .bottom .mySwiper .swiper-button-prev{
+    /* display: none; */
+}
+
+.clients .main .bottom .mySwiper .swiper-button-next{
+    /* display: none; */
+}
+
+.clients .main .bottom .mySwiper .logo4{
+    position: relative;
+    /* bottom: 0.2rem; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.clients .main .bottom .mySwiper .logo6{
+    position: relative;
+    /* right: 7rem; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* bottom: 2rem; */
+}
+
+.clients .main .bottom .mySwiper .logo7,.logo1,.logo2,.logo3{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* bottom: 3rem; */
 }
 
 /* Responsive */
